Basic service tracing implemented. Started on diagram python program

--- a/exercise1/Makefile
+++ b/exercise1/Makefile
@@ -3,8 +3,15 @@ PROGRAM=shedem
 all: $(PROGRAM)
 CFLAGS += -lpthread -lrt
 
-$(PROGRAM): ex0.c
-	$(CC) $(CFLAGS) $? -o $@
+$(PROGRAM): ex0.o memlog.o
+	$(CC) $(CFLAGS) $^ -o $@
+
+ex.o: ex0.c
+	$(CC) $(CFLAGS) $? -c -o $@
+
+memlog.o: memlog.c
+	$(CC) $(CFLAGS) $? -c -o $@
 
 clean:
 	rm -rf $(PROGRAM)
+	rm -rf ex0.o memlog.o
