Adding load testing fibtest program

--- a/exercise1/Makefile
+++ b/exercise1/Makefile
@@ -1,10 +1,14 @@
 PROGRAM=shedem
 
-all: $(PROGRAM)
-CFLAGS += -lpthread -lrt
+all: $(PROGRAM) fibtest
+CFLAGS += -lpthread -lrt -g
 
 $(PROGRAM): ex0.o memlog.o
 	$(CC) $(CFLAGS) $^ -o $@
+
+fibtest: fibtest.o memlog.o
+	$(CC) $(CFLAGS) $^ -o $@
+
 
 ex.o: ex0.c
 	$(CC) $(CFLAGS) $? -c -o $@
@@ -12,6 +16,11 @@ ex.o: ex0.c
 memlog.o: memlog.c
 	$(CC) $(CFLAGS) $? -c -o $@
 
+fibtest.o: fibtest.c
+	$(CC) $(CFLAGS) $? -c -o $@
+
+
 clean:
 	rm -rf $(PROGRAM)
 	rm -rf ex0.o memlog.o
+	rm -rf fibtest fibtest.o
