--- a/feasibility/Makefile
+++ b/feasibility/Makefile
@@ -7,24 +7,29 @@ CFLAGS= -O0 -g $(INCLUDE_DIRS) $(CDEFS)
 LIBS= 
 
 HFILES= 
-CFILES= feasibility_tests.c feasibility_tests_updated.c
+CFILES= feasibility_tests.c feasibility_tests_updated.c tests.c
 
 SRCS= ${HFILES} ${CFILES}
 OBJS= ${CFILES:.c=.o}
 
 all:	feasibility_tests feasibility_tests_updated
 
-clean:
-	-rm -f *.o *.d
-	-rm -f feasibility_tests
+feasibility_tests.o: feasibility_tests.c
+	$(CC) $(LDFLAGS) $(CFLAGS) -c $? -o $@
 
 feasibility_tests: feasibility_tests.o
-	$(CC) $(LDFLAGS) $(CFLAGS) -o $@ $@.o -lm
+	$(CC) $(LDFLAGS) $(CFLAGS) $? -o $@ -lm
 
-feasibility_tests_updated: feasibility_tests_updated.o
-	$(CC) $(LDFLAGS) $(CFLAGS) -o $@ $@.o -lm
+tests.o: tests.c
+	$(CC) $(LDFLAGS) $(CFLAGS) -c $? -o $@
 
-depend:
+feasibility_tests_updated.o: feasibility_tests_updated.c
+	$(CC) $(LDFLAGS) $(CFLAGS) -c $? -o $@
 
-.c.o:
-	$(CC) $(CFLAGS) -c $<
+feasibility_tests_updated: feasibility_tests_updated.o tests.o
+	$(CC) $(LDFLAGS) $(CFLAGS) $^ -o $@ -lm
+
+clean:
+	-rm -f $(OBJS)
+	-rm -f feasibility_tests feasibility_tests_updated
+
