Added LLF to schdule.c

--- a/schedule/Makefile
+++ b/schedule/Makefile
@@ -2,8 +2,9 @@ PROGRAM=schedule
 
 all: $(PROGRAM)
 
-$(PROGRAM): schedule.c
-	$(CC) $(CFLAGS) $? -o $@
+$(PROGRAM): schedule.c ../feasibility/tests.c
+	$(CC) $(CFLAGS) -g $? -o $@ -lm
 
 clean:
 	rm -rf $(PROGRAM)
+	rm -rf *.o
