Fix Makefile dependencies

--- a/schedule/Makefile
+++ b/schedule/Makefile
@@ -2,8 +2,14 @@ PROGRAM=schedule
 
 all: $(PROGRAM)
 
-$(PROGRAM): schedule.c ../feasibility/tests.c
-	$(CC) $(CFLAGS) -g $? -o $@ -lm
+$(PROGRAM): schedule.o ../feasibility/tests.o
+	$(CC) $(CFLAGS) $^ -o $@ -lm
+
+schedule.o: schedule.c
+	$(CC) $(CFLAGS) -c $? -o $@
+
+tests.o: ../feasibility/tests.c
+	$(CC) $(CFLAGS) -c $? -o $@ -lm
 
 clean:
 	rm -rf $(PROGRAM)
