Dumping raw yuv to file

--- a/simple-capture/Makefile
+++ b/simple-capture/Makefile
@@ -7,7 +7,7 @@ CFLAGS= -O0 -g -Wall $(INCLUDE_DIRS) $(CDEFS)
 LIBS= -lrt
 
 HFILES= 
-CFILES= capture.c setup.c v4l2_capabilities.c
+CFILES= capture.c setup.c v4l2_capabilities.c dumptools.c
 
 SRCS= ${HFILES} ${CFILES}
 OBJS= ${CFILES:.c=.o}
@@ -18,8 +18,10 @@ clean:
 	-rm -f *.o *.d
 	-rm -f capture
 
-distclean:
+clean-all:
 	-rm -f *.o *.d
+	-rm -f capture
+	-rm -f *.yuv 
 
 capture: ${OBJS}
 	$(CC) $(LDFLAGS) $(CFLAGS) -o $@ $^ $(LIBS)
