--- a/simple-capture/Makefile
+++ b/simple-capture/Makefile
@@ -7,23 +7,24 @@ CFLAGS= -O0 -g -Wall $(INCLUDE_DIRS) $(CDEFS)
 LIBS= -lrt
 
 HFILES= 
-CFILES= capture.c setup.c v4l2_capabilities.c dumptools.c
+CFILES= capture.c setup.c v4l2_capabilities.c dumptools.c transformation.c
 
 SRCS= ${HFILES} ${CFILES}
 OBJS= ${CFILES:.c=.o}
 
-all:	capture
+all:	capture test_starter
 
 clean:
 	-rm -f *.o *.d
-	-rm -f capture
+	-rm -f capture test_starter
 
-clean-all:
-	-rm -f *.o *.d
-	-rm -f capture
-	-rm -f *.yuv 
+clean-frames:
+	-rm -f *.yuv *.ppm
 
 capture: ${OBJS}
+	$(CC) $(LDFLAGS) $(CFLAGS) -o $@ $^ $(LIBS)
+
+test_starter: capture_starter.o
 	$(CC) $(LDFLAGS) $(CFLAGS) -o $@ $^ $(LIBS)
 
 depend:
