Split out buffer management to different module

--- a/simple-capture/Makefile
+++ b/simple-capture/Makefile
@@ -7,7 +7,7 @@ CFLAGS= -O0 -g -Wall $(INCLUDE_DIRS) $(CDEFS)
 LIBS= -lrt
 
 HFILES= 
-CFILES= capture.c setup.c v4l2_capabilities.c dumptools.c transformation.c
+CFILES= capture.c setup.c v4l2_capabilities.c buffer.c dumptools.c transformation.c
 
 SRCS= ${HFILES} ${CFILES}
 OBJS= ${CFILES:.c=.o}
