Make memlog write to file at end of run

--- a/simple-capture/Makefile
+++ b/simple-capture/Makefile
@@ -16,6 +16,7 @@ clean: clean-frames
 clean-frames:
 	-rm -f *.yuv *.ppm *.pgm
 	-rm -f timestamps.txt
+	-rm -f *.log
 
 sequencer: ${OBJS} sequencer.o capture.o processing.o writeout.o realtime.o memlog.o queue.o
 	$(CC) $(LDFLAGS) $(CFLAGS) -o $@ $^ -lrt -lpthread
