--- a/simple-capture/Makefile
+++ b/simple-capture/Makefile
@@ -12,6 +12,7 @@ all:	capture sequencer
 clean: clean-frames
 	-rm -f *.o *.d
 	-rm -f sequencer capture sharpen test_starter
+	sudo rm -f /dev/mqueue/frame_recieve_q  /dev/mqueue/writeout_q /dev/mqueue/processing_q
 
 clean-frames:
 	-rm -f *.yuv *.ppm *.pgm
