Exam2 sequencer number adder, still buggy

--- a/exam2/Makefile
+++ b/exam2/Makefile
@@ -2,7 +2,7 @@ PROGRAM=three
 
 all: $(PROGRAM)
 
-$(PROGRAM): sequencer.o realtime.o timetools.o memlog.o
+$(PROGRAM): sequencer.o realtime.o timetools.o queue.o resources.o memlog.o
 	$(CC) $(CFLAGS) $^ -o $@ -lpthread -lrt
 
 sequencer.o: sequencer.c
@@ -14,9 +14,16 @@ realtime.o: realtime.c
 timetools.o: timetools.c
 	$(CC) $(CFLAGS) $? -c -o $@
 
+queue.o: queue.c
+	$(CC) $(CFLAGS) $? -c -o $@
+
+resources.o: resources.c
+	$(CC) $(CFLAGS) $? -c -o $@
+
 memlog.o: memlog.c
 	$(CC) $(CFLAGS) $? -c -o $@
 
 clean:
 	rm -rf $(PROGRAM)
 	rm -rf *.o 
+	sudo rm -f /dev/mqueue/w1q  /dev/mqueue/w2q
